--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -256,8 +256,8 @@ a {
 }
 
 .hero {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/mobile/image-hero.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mobile/image-hero.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mobile/image-hero.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/mobile/image-hero.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -384,43 +384,43 @@ a {
 }
 
 .bod .imag0 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/mobile/image-deep-earth.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mobile/image-deep-earth.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mobile/image-deep-earth.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/mobile/image-deep-earth.jpg");
 }
 
 .bod .imag1 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/mobile/image-night-arcade.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mobile/image-night-arcade.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mobile/image-night-arcade.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/mobile/image-night-arcade.jpg");
 }
 
 .bod .imag2 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/mobile/image-soccer-team.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mobile/image-soccer-team.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mobile/image-soccer-team.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/mobile/image-soccer-team.jpg");
 }
 
 .bod .imag3 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/mobile/image-grid.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mobile/image-grid.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mobile/image-grid.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/mobile/image-grid.jpg");
 }
 
 .bod .imag4 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/mobile/image-from-above.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mobile/image-from-above.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mobile/image-from-above.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/mobile/image-from-above.jpg");
 }
 
 .bod .imag5 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/mobile/image-pocket-borealis.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mobile/image-pocket-borealis.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mobile/image-pocket-borealis.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/mobile/image-pocket-borealis.jpg");
 }
 
 .bod .imag6 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/mobile/image-curiosity.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mobile/image-curiosity.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mobile/image-curiosity.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/mobile/image-curiosity.jpg");
 }
 
 .bod .imag7 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/mobile/image-fisheye.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mobile/image-fisheye.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/mobile/image-fisheye.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/mobile/image-fisheye.jpg");
 }
 
 .bod .btn {
@@ -466,8 +466,8 @@ a {
     padding: 0.5em 0.5em;
   }
   .hero {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/images/desktop/image-hero.jpg");
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/desktop/image-hero.jpg");
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/desktop/image-hero.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/desktop/image-hero.jpg");
     height: 100vh;
     background-color: #654583;
     background-blend-mode: darken;
@@ -479,7 +479,7 @@ a {
         -ms-flex-pack: start;
             justify-content: flex-start;
     height: auto;
-    background-image: url("/images/desktop/image-interactive.jpg");
+    background-image: url("../../images/desktop/image-interactive.jpg");
     background-repeat: no-repeat;
     background-size: contain;
     margin: 0;
@@ -540,28 +540,28 @@ a {
             order: 3;
   }
   .bod .imag0 {
-    background: url("/images/desktop/image-deep-earth.jpg");
+    background: url("../../images/desktop/image-deep-earth.jpg");
   }
   .bod .imag1 {
-    background: url("/images/desktop/image-night-arcade.jpg");
+    background: url("../../images/desktop/image-night-arcade.jpg");
   }
   .bod .imag2 {
-    background: url("/images/desktop/image-soccer-team.jpg");
+    background: url("../../images/desktop/image-soccer-team.jpg");
   }
   .bod .imag3 {
-    background: url("/images/desktop/image-grid.jpg");
+    background: url("../../images/desktop/image-grid.jpg");
   }
   .bod .imag4 {
-    background: url("/images/desktop/image-from-above.jpg");
+    background: url("../../images/desktop/image-from-above.jpg");
   }
   .bod .imag5 {
-    background: url("/images/desktop/image-pocket-borealis.jpg");
+    background: url("../../images/desktop/image-pocket-borealis.jpg");
   }
   .bod .imag6 {
-    background: url("/images/desktop/image-curiosity.jpg");
+    background: url("../../images/desktop/image-curiosity.jpg");
   }
   .bod .imag7 {
-    background: url("/images/desktop/image-fisheye.jpg");
+    background: url("../../images/desktop/image-fisheye.jpg");
   }
   .bod .imag {
     background-size: cover;
